--- a/book_1_template.tex
+++ b/book_1_template.tex
@@ -105,6 +105,8 @@ Copyright \copyright\ \the\year\ \thanklessauthor
 
 \par\smallcaps{http://www.northlakechristian.org}
 
+\par\smallcaps{Special thanks to Thomas Morton}
+
 \par  This information is free; you can redistribute it and/or modify it
     under the terms of the GNU General Public License as published by
     the Free Software Foundation; either version 2 of the License, or
@@ -115,12 +117,13 @@ Copyright \copyright\ \the\year\ \thanklessauthor
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
     
-    The source code of this document may be found under a public GIT repository here: \smallcaps{http://www.github.com/hendenburg/onautodeskrevit}
+    The source code of this document may be found under a public GIT repository here: \url{http://www.github.com/hendenburg/onautodeskrevit}
 
     You should have received a copy of the GNU General Public License
     along with this work; if not, write to the Free Software
     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.\index{license}
-
+    
+    \newthought{This document utilizes} the Tufte-Style Book formating method. It utilizes formating and functions of this template. The Template may be found at \url{http://www.LaTeXTemplates.com} and the template is under an individual CC BY-NC-SA 3.0 license.  
 \par\textit{First printing, \monthyear}
 \end{fullwidth}
 
@@ -162,13 +165,13 @@ Let's antiquate ourselves with the introduction page. The introduction page is m
 
 \begin{figure}
 	\includegraphics[width=\linewidth]{revitmainscene.PNG}
-	\caption{This figure shows the opening page when you open up the Revit Application.}
+	\caption[The revit start page]{This figure shows the opening page when you open up the Revit Application.}
 	\emph{There are three major parts to the Revit Application Main Page.}
 	\label{fig:revmainscene}
 \end{figure}
 \begin{marginfigure}
 	\includegraphics[width=\linewidth]{revitnewfile.png}
-	\caption{This is new file popup, you see this whenever you wish to create a new project. You will always be creating a Project, not a Project Template.}
+	\caption[A revit New file popup]{This is new file popup, you see this whenever you wish to create a new project. You will always be creating a Project, not a Project Template.}
 	\emph{You will not be creating any files with the Construction Template}
 	\label{fig:revnewfile}
 \end{marginfigure}
@@ -185,14 +188,14 @@ Once you click \menu{Browse...} you should be taken to another popup. The popup,
 
 \begin{figure}
 	\includegraphics[width=\linewidth]{revittemplateview.png}
-	\caption{A list of the templates that will popup on your screen}
+	\caption[A template file list]{A list of the templates that will popup on your screen}
 	\label{fig:revtmpview}
 \end{figure}
 \marginnote{if you can't find it, the file path is: \directory{ProgramData / Autodesk / RVT 2016 / Templates / US Imperial / default}}
 
 \begin{figure*}
 	\includegraphics[width=\linewidth]{revitfullpageview.png}
-	\caption{A full screen example of the Revit workspace. Composed of multiple ribbon banners, and views. The large whitespace is the plane on which you  have your building}
+	\caption[A revit default workspace]{A full screen example of the Revit workspace. Composed of multiple ribbon banners, and views. The large whitespace is the plane on which you  have your building}
 	\label{fig:revfullview}
 \end{figure*}
 
@@ -201,7 +204,7 @@ Once you click \menu{Browse...} you should be taken to another popup. The popup,
 
 \begin{figure*}
 	\includegraphics[width=\linewidth]{revittopbar.png}
-	\caption{The revit top bar, at it's base.}
+	\caption[The revit top bar]{The revit top bar, at it's base.}
 	\label{fig:revtopbar.png}
 \end{figure*}
 
@@ -222,7 +225,7 @@ As you create the house below, you will become familiar with all these tools; ea
 
 \begin{figure*}
 	\includegraphics[width=\linewidth]{revitannotationbar.png}
-	\caption{A picture of the \menu{Annotation} bar in revit.}
+	\caption[The annotation bar]{A picture of the \menu{Annotation} bar in revit.}
 	\label{fig:revanntab}
 \end{figure*}
 
@@ -232,7 +235,7 @@ As you create the house below, you will become familiar with all these tools; ea
 
 \begin{figure*}
 	\includegraphics[width=\linewidth]{revitmassingsitebar.png}
-	\caption{A picture of the \menu{Massing \& site} bar in revit.}
+	\caption[The massing and site bar]{A picture of the \menu{Massing \& site} bar in revit.}
 	\label{fig:revmastab}
 \end{figure*}
 
@@ -242,7 +245,7 @@ As you create the house below, you will become familiar with all these tools; ea
 
 \begin{figure*}
 	\includegraphics[width=\linewidth]{revitviewtab.png}
-	\caption{A picture of the \menu{View} bar in revit.}
+	\caption[The view bar]{A picture of the \menu{View} bar in revit.}
 	\label{fig:revviewtab}
 \end{figure*}
 
@@ -250,7 +253,7 @@ As you create the house below, you will become familiar with all these tools; ea
 
 \begin{figure*}
 	\includegraphics[width=\linewidth]{revitmodifytab.png}
-	\caption{A picture of the \menu{Modify} bar in revit.}
+	\caption[The modify bar]{A picture of the \menu{Modify} bar in revit.}
 	\label{fig:revmodtab}
 \end{figure*}
 
@@ -277,7 +280,7 @@ Figure \ref{fig:revfinhouse} is a picture of what your house will look like.
 
 \begin{marginfigure}
 	\includegraphics[width=\linewidth]{revitsidebar}
-	\caption{A picture of the \menu{Revit Sidebar}}
+	\caption[The revit side bar]{A picture of the \menu{Revit Sidebar}}
 	\label{fig:revsidebar}
 \end{marginfigure}
 
@@ -291,7 +294,7 @@ The following guide's purpose is to establish an understanding of altitudes and 
 
 	\begin{marginfigure}
 		\includegraphics[width=\linewidth]{revitelevationslistview.png}
-		\caption{A view of the elevations: East, North, South, and West}
+		\caption[The revit elevations list]{A view of the elevations: East, North, South, and West}
 		\label{fig:revelevlistview}
 	\end{marginfigure}
 	
@@ -301,7 +304,7 @@ The following guide's purpose is to establish an understanding of altitudes and 
 	
 	\begin{marginfigure}
 		\includegraphics[width=\linewidth]{revitelevationsclick.png}
-		\caption{Elevation lines that have been clicked once}
+		\caption[Clicked elevation lines]{Elevation lines that have been clicked once}
 		\label{fig:revelevclick}
 	\end{marginfigure}
 	
@@ -324,7 +327,7 @@ The following guide's purpose is to establish an understanding of altitudes and 
 	
 	\begin{marginfigure}
 		\includegraphics[width=\linewidth]{revitoptionsbar.png}
-		\caption{The options bar, which is mostly used to set chain settings and offsets}
+		\caption[The revit options bar]{The options bar, which is mostly used to set chain settings and offsets}
 		\label{fig:revoptbar}
 	
 	\end{marginfigure}
@@ -333,14 +336,14 @@ The following guide's purpose is to establish an understanding of altitudes and 
 	
 	\begin{figure}
 		\includegraphics[width=\linewidth]{revitelevationlinethree.png}
-		\caption{When creating new elevations lines, you should drag from one end to the other to ensure consistency. In this case, \menu{Level 3} will be the level of entry, because its at a base altitude.}
+		\caption[Shortened elevation lines]{When creating new elevations lines, you should drag from one end to the other to ensure consistency. In this case, \menu{Level 3} will be the level of entry, because its at a base altitude.}
 		\emph{Make sure that your elevations look similar to this figure}
 		\label{fig:revelevlinethree}
 	\end{figure}
 	
 	\begin{marginfigure}
 		\includegraphics[width=\linewidth]{revitelevationsname.png}
-		\caption{Make sure that your final elevations are named likewise}
+		\caption[The names of elevation lines]{Make sure that your final elevations are named likewise}
 		\label{fig:revelevname}
 	\end{marginfigure}
 	
@@ -355,6 +358,7 @@ The following guide's purpose is to establish an understanding of altitudes and 
 \end{enumerate}
 
 \chapter{Chapter 2 - Creating the Base of the House}
+\label{ch:2}
 The purpose of this guide is to instruct in the method of creating the foundation for the project.
 \section{Creating the Retaining Walls}
 \begin{enumerate}
@@ -380,7 +384,7 @@ The purpose of this guide is to instruct in the method of creating the foundatio
 	
 	\begin{marginfigure}
 		\includegraphics[width=\linewidth]{revitobjecttype.png}
-		\caption{When selecting an object in Revit. There is, of course, different object types. The image in this figure is the \menu{Object Selector}. For walls specifically, there are multiple types that we use. When referenced, the Object type can be explained as \menu{Sidebar > Properties > Object Selector > Basic Wall Retaining - 12" Concrete} or plainly as \menu{Basic Wall Retaining - 12" Concrete}}
+		\caption[Revit object types]{When selecting an object in Revit. There is, of course, different object types. The image in this figure is the \menu{Object Selector}. For walls specifically, there are multiple types that we use. When referenced, the Object type can be explained as \menu{Sidebar > Properties > Object Selector > Basic Wall Retaining - 12" Concrete} or plainly as \menu{Basic Wall Retaining - 12" Concrete}}
 		\label{fig:revobjtype}
 	\end{marginfigure}
 	
@@ -389,7 +393,7 @@ The purpose of this guide is to instruct in the method of creating the foundatio
 	\begin{figure}
 		\includegraphics[width=\linewidth]{revitfoundationwalls.png}
 		\caption{The foundation walls}
-		\emph{This is what your walls should look like}
+		\emph[Revit retaining walls]{This is what your walls should look like}
 		\label{key:revfoundwalls}
 	\end{figure}
 	\item Repeat the same steps, moving your cursor right and typing: \keys{40'}
@@ -422,13 +426,14 @@ The purpose of this guide is to instruct in the method of creating the foundatio
 	
 	\begin{figure*}
 		\includegraphics[width=\linewidth]{revitfoundationfinal.png}
-		\caption{The final foundation walls}
+		\caption[Revit foundation and retaining walls]{The final foundation walls}
 		\emph{Make sure your walls  look like this}
 		\label{fig:revfoundfinal}
 	\end{figure*}
 \end{enumerate}
 
 \chapter{Chapter 3 - Creating the Terrain}
+\label{ch:3}
 The purpose of this guide is to introduce the basics of terrain creation in Revit. This should explain the basics of pads and terrain.
 \section{Adding a Toposurface}
 \begin{enumerate}
@@ -460,18 +465,115 @@ The purpose of this guide is to introduce the basics of terrain creation in Revi
 	\end{figure}
 	\clearpage
 	\section{Setting up a Building Pad}
+	\marginnote{Remember that it's best to avoid adding excessive amounts of topographic points, which may slow your computer.}
 	\item Having finished the terrain surface by clicking the big green checkmark.
 	\item To create a building pad click on each of the walls with the \menu{Massing \& Site > Building Pad} tool.
-	\item Click each wall, finally click the purple line with three parrallel lines attached: click it until the purples lines are only on the interior of the walls. Reference figure \ref{fig:revtopopad}
+	\item Click each wall, finally click the purple line with three parallel lines attached: click it until the purples lines are only on the exterior of the walls. Reference figure \ref{fig:revtopopad}
 	\begin{figure}
 		\includegraphics[width=\linewidth]{revittopographicpad.png}
-		\caption{Building pad lines}
+		\caption[Building Pad Lines]{When building a pad, it's essential that it covers the buildings base, but doesn't extend past it. The pads purpose it to place a solid foundation base, while making sure that the terrain does not enter the floors of your building, so it removes any terrain where it's at.}
 		\emph{Make sure your pad looks like this, it's not essential but recommended}
-		\ref{fig:revtopopad}
+		\label{fig:revtopopad}
+	\end{figure}
+	\section{Creating a 3D view}
+	\item Click on the tool \menu{View > 3d View}, it will create a new view called \menu{Sidebar > Project Browser > 3d Views > \{3D\}} right click on this view to rename it to something, I recommend \menu{To Building}
+	\begin{marginfigure}
+		\includegraphics[width=\linewidth]{revitthreedviewcube.png}
+		\caption[Revit 3D Maneuvering Square]{Use the 3d viewcube to move around the 3D environment. If you grip the sides and corners with your mouse, you can drag it to change your view. }
+		\emph{The proficient use of this is essential, so make sure you focus on it in later projects.}
+		\label{fig:revthreemansquare}
+	\end{marginfigure}
+	\item select your renamed \menu{3d View} and use the 3D maneuvering square to change the view. Reference Figure \ref{fig:revthreemansquare}
+	\begin{figure}
+		\includegraphics[width=\linewidth]{revitthreedtopographic.png}
+		\caption[Revit 3D view after Topographic Creation]{It's Important that everything looks realistic. When presenting your building, you want to an accurate representation of what it would look like. If you wish for further information, either ask your teacher, or reference any information on rendering}
+		\emph{Make sure your 3D view looks rather similar to this, but it will vary from person to person}
+		\label{fig:revthreedtopo}
 	\end{figure}
 \end{enumerate}
 	
+\chapter{Chapter 4 - Creating Exterior Walls, Floors, and Roofs}
+\label{ch:4}
+The purpose of this guide is to continue on the education of wall creation. This also touches on the creation of wall retained floors, and non retained floors.
+\section{Creating Exterior walls}
+\subsection{Add walls to the entry level}
 
+\begin{enumerate}
+	\item go to the following view: \menu{Sidebar > Project Browser > Floor Plans > 00 Entry Level}
+	\item Create the following walls with these options:
+	
+	\marginnote{If you are having issues with seeing objects below the current view level, then change the following settings. While you have the view selected in the \menu{Sidebar > Properties} there is an option called \menu{View Range}, if you go into that setting and change the \menu{View Depth > Level:} option to the appropriate level you wish to have your view depth to.}
+	
+	\begin{tabular}{c | c}
+		Settings & \menu{Generic - 6"}\\
+		\hline
+		Location Line & Core Face Interior\\
+		Base Constraint & \menu{02 Entry Level}\\
+		Base Offset & \menu{0'0"}\\
+		Top Constraint & Up to \menu{03 Roof Level}\\
+		Top Offset & \menu{0'0"}\\
+	\end{tabular}
+	
+	\item beginning at the bottom right, trace the interior of the three existing retaining walls, the three rightmost walls, by selecting endpoints. Reference figure \ref{fig:reventlvlwalls}.
+	
+	\begin{figure}
+		\includegraphics[width=\linewidth]{revitentrylevelwalls.png}
+		\caption[Entry level walls]{The walls along the retaining walls which reach the exterior walls are meant to border the interior of the retaining walls. By selecting \menu{Core Face Interior} the walls are more easily alinged with the interior face of the walls.}
+		\emph{Make sure your walls look like this, annotations excluded}
+		\label{fig:reventlvlwalls}
+	\end{figure}
+	
+	\subsection{Add walls to the Lower level}
+	\item Open up the following: \menu{Sidebar > Project Browser > Floor Plans > 01 Lower Level}
+	\item Use the following settings:
+	
+	\begin{tabular}{c | c}
+		Settings & \menu{Generic - 6"}\\
+		\hline
+		Location Line & Core Face Interior\\
+		Base Constraint & \menu{01 Lower Level Level}\\
+		Base Offset & \menu{0'0"}\\
+		Top Constraint & Up to \menu{03 Roof Level}\\
+		Top Offset & \menu{0'0"}\\
+	\end{tabular}
+	
+	\item Trace the interior of the Foundation walls, the 5 leftmost walls. Reference figure \ref{fig:revlowlvlwalls}
+	
+	\begin{marginfigure}
+		\includegraphics[width=\linewidth]{revitlowerlevelwalls.png}
+		\caption{Lower Level Walls}
+		\emph{Make sure your walls look like this, annotations excluded}
+		\label{fig:revlowlvlwalls}
+	\end{marginfigure}
+	
+	\clearpage
+	
+	\begin{figure*}
+		\includegraphics[width=\linewidth]{revitthreedouterwalls.png}
+		\caption[Exterior walls 3D view]{This is the 3D view of the outer walls. If one of your walls is taller or shorter than the other, make sure that you have the correct height selected in your wall options.}
+		\emph{Your 3D view should now look rather similar to this}
+		\label{fig:revthreedoutwalls}
+	\end{figure*}
+	
+	\section{Creating a Roof}
+	\item Go to the following view: \menu{Sidebar > Project Browser > Floor Plans > 03 Roof Level}
+	\item the tool you should use is called: \menu{Architecture > Build > Roof}
+	\subsection{Draw a roof line}
+	\item When you select the roof tool, you are brought to the modify tab, you will want to select the line tool, which is under \menu{Modify | Create Roof Footprint > Draw > Line Tool}. Selecting that tool allows you to create a roof in the same was as a wall, except to create a roof, you must create a closed perimeter with your lines to define the roof.
+	\item Make sure the option: \menu{Options Bar > Chain:} is not checkmarked, this means that when you click to create two points, it automatically starts to make the next points. 
+	
+	\begin{marginfigure}
+		\includegraphics[width=\linewidth]{revitroofintersect.png}
+		\caption[Revit Roof Intersection]{when you push a line past a walls end, it will give you guides in relation to other objects in the project. So for this one, you will want to click only when it gives you guide lines that reach to the leftmost wall.}
+		\label{fig:revroofinter}
+	\end{marginfigure}
+	
+	\item Trace the southernmost walls past the end, where it becomes parallel with the endpoints of the rightmost wall. The intersection should look like Figure \ref{fig:revroofinter}
+	
+	\subsection{Draw an offset roof line}
+	
+
+\end{enumerate}
 
 %----------------------------------------------------------------------------------------
 
